# ml-sentiment-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: api.py  main.py  models.py  service.py
app/ml/: sentiment_model.py
tests/: test_health.py  test_inference.py
