[project]
name = "ml-sentiment-service"
version = "0.1.0"
description = "A simple ML inference API for sentiment analysis."
readme = "README.md"
requires-python = ">=3.9,<3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "pydantic>=2.7.0",
]

[tool.setuptools]
package-dir = {"" = "app"}